[package]
name = "fulytic-logic"
version = "0.1.0"
edition = "2021"
description = "The logic layer of the Fulytic project (game logic, NPC AI, etc.)"

[dependencies]
fulytic-core.workspace = true
fulytic-macros.workspace = true
fulytic-othello.workspace = true

[lib]
name = "fulytic_logic"

[workspace]
resolver = "2"
members = ["fulytic-core", "fulytic-macros", "games/fulytic-othello"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
fulytic-core = { path = "fulytic-core" }
fulytic-macros = { path = "fulytic-macros" }
fulytic-othello = { path = "games/fulytic-othello" }

# ser/de and that related
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "0.2"

# math
num = "0.4"

# error
anyhow = "1.0"
thiserror = "2.0"

# utils
uuid = { version = "1.15", features = ["serde", "v4", "fast-rng"] }
itertools = "0.14"
tinyvec = "1.9"
enum-table = "0.2"
local-fmt = { version = "0.5", features = ["macros", "macros-toml"] }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
